fix(range): knob is not cut off in item with modern syntax (#28199)
Issue number: resolves #27199

---------

<!-- Please do not submit updates to dependencies unless it fixes an
issue. -->

<!-- Please try to limit your pull request to one type (bugfix, feature,
etc). Submit multiple pull requests if needed. -->

## What is the current behavior?
<!-- Please describe the current behavior that you are modifying. -->

When using the modern range in an item, the knob will get cut off by the
item when the value is at either the min or the max.

## What is the new behavior?
<!-- Please describe the behavior or changes that are being added by
this PR. -->

- Range knob is no longer cut off by the item

## Does this introduce a breaking change?

- [ ] Yes
- [x] No

<!-- If this introduces a breaking change, please describe the impact
and migration path for existing applications below. -->


## Other information

<!-- Any other information that is important to this PR such as
screenshots of how the component looks before and after the change. -->


This is an extension of
https://github.com/ionic-team/ionic-framework/pull/27188. I decided to
make a separate branch/PR since I added tests and changed the
implementation a bit. Feel free to take all/some/none of this code.

---------

--- a/core/src/components/range/range.ios.vars.scss
+++ b/core/src/components/range/range.ios.vars.scss
@@ -7,7 +7,15 @@
 $range-ios-padding-vertical: 8px !default;
 
 /// @prop - Padding start/end of the range
+// TODO FW-2997 Remove this
 $range-ios-padding-horizontal: 16px !default;
+
+/// @prop - Padding start/end of the range - modern syntax
+/**
+ * 24px was chosen so the knob and its
+ * shadow do not get cut off by the item.
+ */
+$range-ios-item-padding-horizontal: 24px !default;
 
 /// @prop - Height of the range slider
 $range-ios-slider-height: 42px !default;
